# 06.fractal-mpi

./: CMakeLists.txt  arial_ttf.h  draw_text.cpp  fractal_mpi.cpp  fractal_mpi.h  main.cpp  palette.cpp  palette.h
